# netnet

./: .gitignore  pyproject.toml
netnet/: __main__.py
netnet/plugins/: roleplay.py
netnet/structure/api/: __init__.py  kawaii.py
netnet/structure/common/: __init__.py  bot.py  logger.py
netnet/structure/variables/: ascii_colors.py
